fix: overflow on mobile or desktop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,6 @@
   body {
     @apply bg-background text-foreground;
     height: 100vh;
-    width: 100vw;
     font-feature-settings: "rlig" 1, "calt" 1;
     background: linear-gradient(
     180deg, 
